Implement authentication endpoints and response handling